--- a/css/main.css
+++ b/css/main.css
@@ -10,42 +10,52 @@ body {
   height: auto;
   top: 0;
   bottom: 0;
-  z-index: 100;
-}
-.logo {
-  width: 80vw;
-  max-width: 250px;
-  height: auto;
-  max-height: 110px;
-  margin: 5vh 0;
 }
 p {
   margin-top: 10px;
   font-size: 42px;
   color: #D49542;
 }
+a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+#logo {
+  width: 80vw;
+  max-width: 250px;
+  height: auto;
+  max-height: 110px;
+  margin: 5vh 0;
+}
 #play-button {
   width: 50vw;
   max-width: 180px;
-  height: 50vh;
-  max-height: 180px;
   margin: auto;
   color: #5B381C;
   cursor: pointer;
-  z-index: 100;
 }
-#play-button:hover {
+#about-button {
+  background: #654018;
+  color: #fff;
+  font-size: 30px;
+  padding: 10px 15px;
+  border-radius: 30px;
+  width: 180px;
+  margin: auto;
+  cursor: pointer;
+}
+#play-button:hover, #about-button:hover {
   opacity: 0.75;
 }
-.play-svg {
+#play-svg {
   filter: invert(22%) sepia(19%) saturate(1679%) hue-rotate(344deg) brightness(93%) contrast(90%);
 }
-.background {
+#background {
   position: fixed;
   opacity: 0.3;
   width: 100%;
   height: auto;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: -1;
 }
