--- a/css/stage.css
+++ b/css/stage.css
@@ -1,6 +1,5 @@
 :root {
   --count:'3';
-  --gone: block;
   --gameWidth: 0.2;
   --baseWidth: calc(90vh - 270px);
 }
@@ -90,22 +89,23 @@ body {
   margin: calc(min(var(--baseWidth), 90vw) * 0.005);
   border-radius: 16%;
 }
-#counter:before {
+
+.block:nth-child(1):before {
+  color: #000;
+  background: rgba(255, 255, 255, 0.6);
+  display: block;
   content: var(--count);
-  display: var(--gone);
   font-family: 'Montserrat', sans-serif;
-  padding-top: 12px;
-  width: 60px;
-  height: 48px;
+  margin: calc((var(--baseWidth) * var(--gameWidth) - 70px)/2 - (min(var(--baseWidth), 90vw) * 0.005));
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
   font-size: 30px;
   text-align: center;
   position: absolute;
-  transform-origin: center center;
   border-radius: 50%;
-  animation: count 3s linear forwards;
-  user-select: none;
-  color: #000;
-  background: #fff;
+  animation: count 3.1s linear forwards;
+  z-index: 10;
 }
 @keyframes count {
   0% { content: '3'; }
@@ -123,9 +123,9 @@ body {
   content:'\2713';
   font-family: 'Montserrat', sans-serif;
   font-size: 5vmin;
-  line-height: 10vmin;
-  width: 10vmin;
-  height: 10vmin;
+  line-height: 100%;
+  width: 100%;
+  height: 100%;
   text-align: center;
   font-weight: 900;
   position: absolute;
@@ -133,13 +133,13 @@ body {
   top: 0;
   transform-origin: center center;
   transform: scale(.3);
-  background: rgba(255,255,255,.5);
+  background: rgba(255,255,255,.6);
   border-radius: 50%;
-  animation: match .5s ease-in forwards;
+  animation: match .3s ease-out forwards;
   visibility: visible !important;
 }
 @keyframes match {
-  0% { transform:scale(.1); }
+  0% { transform:scale(.0); }
   50% { transform:scale(.6); }
   100% { transform:scale(.5); }
 }
