--- a/css/stage.css
+++ b/css/stage.css
@@ -96,23 +96,26 @@ body {
   display: block;
   content: var(--count);
   font-family: 'Montserrat', sans-serif;
-  margin: calc((var(--baseWidth) * var(--gameWidth) - 70px)/2 - (min(var(--baseWidth), 90vw) * 0.005));
-  width: 70px;
-  height: 70px;
-  line-height: 70px;
+  width: calc(var(--baseWidth) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
+  height: calc(var(--baseWidth) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
+  max-width: calc(100vw * var(--gameWidth));
+  max-height: calc(100vw * var(--gameWidth));
+  line-height: calc(var(--baseWidth) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
   font-size: 30px;
   text-align: center;
   position: absolute;
-  border-radius: 50%;
-  animation: count 3.1s linear forwards;
+  animation: count 4s linear forwards;
+  border-radius: calc(((100% / (var(--gameWidth) * 10)) - (min(var(--baseWidth), 90vw) * 0.01)) * 0.16);
+  transition: 0.3s;
   z-index: 10;
 }
 @keyframes count {
   0% { content: '3'; }
-  60% { content: '2'; }
-  80% { content: '1'; }
-  99% { content: '1'; visibility:hidden; }
-  100% { content: '0'; visibility:hidden; }
+  50% { content: '2'; }
+  70% { content: '1'; }
+  90% { content: '1'; opacity: 1; }
+  99% { content: '1'; opacity: 0; }
+  100% { content: '0'; opacity: 0; visibility:hidden;}
 }
 
 .clicked {
