--- a/css/stage.css
+++ b/css/stage.css
@@ -41,10 +41,10 @@ body {
 }
 #game-block #game {
   justify-content: center;
-  width: calc(var(--baseWidth) * var(--gameWidth));
-  height: calc(var(--baseWidth) * var(--gameWidth));
-  max-width: calc(100vw * var(--gameWidth));
-  max-height: calc(100vw * var(--gameWidth));
+  width: calc(var(--baseWidth) * var(--gameWidth) * (9/7));
+  height: calc(var(--baseWidth) * var(--gameWidth) * (9/7));
+  max-width: calc(100vw * var(--gameWidth) * (9/7));
+  max-height: calc(100vw * var(--gameWidth) * (9/7));
   margin: auto;
 }
 #result {
@@ -83,8 +83,8 @@ body {
 }
 .block {
   float: left;
-  width: calc((100% / (var(--gameWidth) * 10)) - (min(var(--baseWidth), 90vw) * 0.01));
-  height: calc((100% / (var(--gameWidth) * 10)) - (min(var(--baseWidth), 90vw) * 0.01));
+  width: calc((10% / var(--gameWidth)) - (min(var(--baseWidth), 90vw) * 0.01));
+  height: calc((10% / var(--gameWidth)) - (min(var(--baseWidth), 90vw) * 0.01));
   position: relative;
   margin: calc(min(var(--baseWidth), 90vw) * 0.005);
   border-radius: 16%;
@@ -95,11 +95,11 @@ body {
   display: block;
   content: var(--count);
   font-family: 'Montserrat', sans-serif;
-  width: calc(var(--baseWidth) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
-  height: calc(var(--baseWidth) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
-  max-width: calc(100vw * var(--gameWidth));
-  max-height: calc(100vw * var(--gameWidth));
-  line-height: calc(var(--baseWidth) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
+  width: calc(var(--baseWidth) * (9/7) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
+  height: calc(var(--baseWidth) * (9/7) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
+  max-width: calc(100vw * var(--gameWidth) * (9/7) - (min(var(--baseWidth), 90vw) * 0.01));
+  max-height: calc(100vw * var(--gameWidth) * (9/7)- (min(var(--baseWidth), 90vw) * 0.01));
+  line-height: calc(var(--baseWidth) * (9/7) * var(--gameWidth) - (min(var(--baseWidth), 90vw) * 0.01));
   font-size: 30px;
   text-align: center;
   position: absolute;
@@ -171,8 +171,8 @@ body {
   border-radius: 6px;
   font-size: 10px !important;
   background: rgba(0, 0, 0, 0.35) !important;
-  width: calc(22vw - 10px);
-  min-width: 160px;
+  width: calc(30vw - 10px);
+  min-width: 150px;
 }
 #records #stat-box #stat {
   padding: 6px !important;
