--- a/css/stage.css
+++ b/css/stage.css
@@ -110,7 +110,7 @@ body {
 }
 @keyframes count {
   0% { content: '3'; }
-  50% { content: '2'; }
+  50% { cจ๔ontent: '2'; }
   70% { content: '1'; }
   90% { content: '1'; opacity: 1; }
   99% { content: '1'; opacity: 0; }
@@ -124,7 +124,7 @@ body {
 .match:after {
   content:'\2713';
   font-family: 'Montserrat', sans-serif;
-  font-size: min(5vw, 5vh);
+  font-size: inherit;
   line-height: 100%;
   width: 100%;
   height: 100%;
