--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,9 @@ body {
 }
 p {
   margin-top: 10px;
-  font-size: 42px;
+  margin-left: -50px;
+  margin-right: -50px;
+  font-size: 36px;
   color: #D49542;
 }
 a {
@@ -21,27 +23,27 @@ a {
   text-decoration: none;
 }
 #logo {
-  width: 80vw;
-  max-width: 250px;
+  width: 70vw;
+  max-width: 200px;
   height: auto;
-  max-height: 110px;
+  max-height: 160px;
   margin: 5vh 0;
 }
 #play-button {
   width: 50vw;
-  max-width: 180px;
+  max-width: 140px;
   margin: auto;
   color: #5B381C;
   cursor: pointer;
 }
-#about-button {
+#button-component {
   background: #654018;
   color: #fff;
-  font-size: 30px;
+  font-size: 5vw;
   padding: 10px 15px;
-  border-radius: 30px;
-  width: 180px;
-  margin: auto;
+  border-radius: 100px;
+  width: auto;
+  margin: 0 25vw 10px 25vw;
   cursor: pointer;
 }
 #play-button:hover, #about-button:hover {
