--- a/css/about.css
+++ b/css/about.css
@@ -63,7 +63,8 @@ a {
 }
 
 #back-button #arrow-svg {
-  filter: invert(100%);
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
   margin-top: 6px;
   margin-bottom: -6px;
 }
