--- a/css/stage.css
+++ b/css/stage.css
@@ -38,6 +38,8 @@ body {
 }
 
 #game-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: var(--baseWidth);
   height: var(--baseWidth);
@@ -47,7 +49,9 @@ body {
 }
 
 #game-block #game {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: calc(var(--baseWidth) * var(--gameWidth) * (9/7));
   height: calc(var(--baseWidth) * var(--gameWidth) * (9/7));
   max-width: calc(100vw * var(--gameWidth) * (9/7));
@@ -62,6 +66,8 @@ body {
 
 #stat-box {
   margin: 0 5vw 15px 5vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background: rgba(0, 0, 0, 0.6);
   border-radius: 5px;
@@ -119,23 +125,37 @@ body {
   font-size: 30px;
   text-align: center;
   position: absolute;
-  animation: count 3s linear forwards;
+  -webkit-animation: count 3s linear forwards;
+          animation: count 3s linear forwards;
   border-radius: calc(((100% / (var(--gameWidth) * 10)) - (min(var(--baseWidth), 90vw) * 0.01)) * 0.16);
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
   z-index: 10;
+}
+
+@-webkit-keyframes count {
+  0% { content: '3'; }
+  50% { content: '2'; }
+  70% { content: '1'; }
+  90% { content: '1'; opacity: 1; }
+  99% { content: '1'; opacity: 0; }
+  100% { content: '0'; opacity: 0; visibility:hidden;}
 }
 
 @keyframes count {
   0% { content: '3'; }
   50% { content: '2'; }
-  80% { content: '1'; }
+  70% { content: '1'; }
   90% { content: '1'; opacity: 1; }
   99% { content: '1'; opacity: 0; }
   100% { content: '0'; opacity: 0; visibility:hidden;}
 }
 
 .clicked {
-  transform: scale(.85);
+  -webkit-transform: scale(.85);
+      -ms-transform: scale(.85);
+          transform: scale(.85);
   visibility: visible !important;
 }
 
@@ -150,18 +170,29 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  transform-origin: center center;
-  transform: scale(.3);
+  -webkit-transform-origin: center center;
+      -ms-transform-origin: center center;
+          transform-origin: center center;
+  -webkit-transform: scale(.3);
+      -ms-transform: scale(.3);
+          transform: scale(.3);
   background: rgba(255,255,255,.6);
   border-radius: 50%;
-  animation: match .3s ease-out forwards;
+  -webkit-animation: match .3s ease-out forwards;
+          animation: match .3s ease-out forwards;
   visibility: visible !important;
 }
 
+@-webkit-keyframes match {
+  0% { -webkit-transform:scale(.0); transform:scale(.0); }
+  50% { -webkit-transform:scale(.6); transform:scale(.6); }
+  100% { -webkit-transform:scale(.5); transform:scale(.5); }
+}
+
 @keyframes match {
-  0% { transform:scale(.0); }
-  50% { transform:scale(.6); }
-  100% { transform:scale(.5); }
+  0% { -webkit-transform:scale(.0); transform:scale(.0); }
+  50% { -webkit-transform:scale(.6); transform:scale(.6); }
+  100% { -webkit-transform:scale(.5); transform:scale(.5); }
 }
 
 #clicks, #time {
@@ -173,6 +204,8 @@ body {
 
 #records {
   margin: 10px auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   color:#fff;
 }
@@ -183,6 +216,8 @@ body {
   border-radius: 20px;
   background: rgba(0, 0, 0, 0.35);
   font-size: 12px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   text-align: center;
 }
@@ -243,7 +278,8 @@ a {
 }
 
 #back-button #arrow-svg {
-  filter: invert(100%);
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
   margin-top: 6px;
   margin-bottom: -6px;
 }
