--- a/css/stage.css
+++ b/css/stage.css
@@ -59,6 +59,11 @@ body {
   margin: auto;
 }
 
+
+#game-block #game .hideout {
+  display: none;
+}
+
 #result {
   margin-top: 15px;
   margin-bottom: 5px;
@@ -128,8 +133,7 @@ body {
   -webkit-animation: count 3s linear forwards;
           animation: count 3s linear forwards;
   border-radius: calc(((100% / (var(--gameWidth) * 10)) - (min(var(--baseWidth), 90vw) * 0.01)) * 0.16);
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
+  -webkit-transition:0.3s;
   transition: 0.3s;
   z-index: 10;
 }
@@ -154,7 +158,6 @@ body {
 
 .clicked {
   -webkit-transform: scale(.85);
-      -ms-transform: scale(.85);
           transform: scale(.85);
   visibility: visible !important;
 }
@@ -171,10 +174,8 @@ body {
   left: 0;
   top: 0;
   -webkit-transform-origin: center center;
-      -ms-transform-origin: center center;
           transform-origin: center center;
   -webkit-transform: scale(.3);
-      -ms-transform: scale(.3);
           transform: scale(.3);
   background: rgba(255,255,255,.6);
   border-radius: 50%;
@@ -296,4 +297,28 @@ a {
   bottom: 0;
   left: 0;
   z-index: -1;
+}
+
+#play-again {
+  display: none;
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  font-size: 24px;
+  width: var(--baseWidth);
+  margin: 40px auto;
+  padding: 20px;
+  border-radius: 40px;
+  cursor: pointer;
+}
+
+#play-again:hover {
+  opacity: 0.75;
+}
+
+#play-again.show {
+  display: inline-block;
+}
+
+.hideout {
+  display: none !important;
 }
